# BFT

./: .gitignore  README.md  algorithm_testing.py  calculate_graphs.py  draw.py  graph.py  graph_templates.py  logger.py  main.py  proposition.txt  pyproject.toml  sample.py  test.py  testNotebook.py  variables.py  vertex.py  wyniki.md
algorithms/: algorithm_testing.py  king_algorithm.py  lamport_algorithm.py  lamport_zlosliwosci.py  operations_batch.py  pbft_algorithm.py  q_voter.py
